--- a/package.json
+++ b/package.json
@@ -10,20 +10,18 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
-    "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/redux": "^3.6.0",
     "antd": "^5.2.0",
     "axios": "^1.3.2",
     "chart.js": "^4.2.1",
-    "draft-js": "^0.11.7",
-    "draftjs-to-html": "^0.9.1",
     "firebase": "^9.18.0",
+    "markdown-it": "^13.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-draft-wysiwyg": "^1.15.0",
     "react-images-uploading": "^3.1.7",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
@@ -61,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/markdown-it": "^12.2.3",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
